--- a/views/index.mustache
+++ b/views/index.mustache
@@ -1,68 +1,66 @@
 <!doctype html>
-<!--
-You should be able to add new todos and mark todos as complete.
-use Sequelize to store your todos
-add the ability to edit and delete individual todos.
-Add a button to delete all completed todos.
-Sort your todos by their creation date, newest on top. -->
-
 <html>
 <head>
   <title>Super Cool Todolist</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Arvo|Indie+Flower" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Todolist</h1>
+  <h1>Welcome back to your Todolist!</h1>
 
   <form method="post" action="/new">
-    <input type="text" name="new" placeholder="Enter a new todo here..."></input>
+    <input type="text" name="new" class="new" placeholder="Enter a new todo here..."></input>
     <input type="submit" name="submit" value="Add todo">
   </form>
 
-  <form method="post" action="/sort">
-    <label for="sort">Sort todos by:</label>
-    <select name="sort" id="sort">
-      <option value="ascending">Creation date: Ascending</option>
-      <option value="descending">Creation date: Descending</option>
-    </select>
-    <input type="submit" value="Sort" class="sort-btn">
-  </form>
+  <div class="incomplete-wrapper">
+    <h3>Incomplete todos</h3>
+    <form method="post" action="/sort">
+      <label for="sort">Sort todos by:</label>
+      <select name="sort" id="sort">
+        <option value="ascending">Creation date: Ascending</option>
+        <option value="descending">Creation date: Descending</option>
+      </select>
+      <input type="submit" value="Sort" class="sort-btn">
+    </form>
+    <ul>
+      {{ #todos }}
+        {{ ^completed }}
+      <li>
+        <p>{{ title }}</p>
+        <form method="post" action="/completed/{{ id }}">
+          <input type="submit" name="completed" value="Mark as complete">
+        </form>
+        <form method="post" action="/edit/{{ id }}">
+          <input type="text" name="editbox" placeholder="Edit this todo...">
+          <input type="submit" name="edit" value="Edit todo">
+        </form>
+        <form method="post" action="/delete/{{ id }}">
+          <input type="submit" name="delete" value="Delete todo">
+        </form>
+      </li>
+        {{ /completed }}
+      {{ /todos }}
+    </ul>
+  </div>
 
-  <h3>Incomplete todos</h3>
-  <ul>
-    {{ #todos }}
-      {{ ^completed }}
-    <li>
-      <p>{{ title }}</p>
-      <form method="post" action="/completed/{{ id }}">
-        <input type="submit" name="completed" value="Mark as complete">
-      </form>
-      <form method="post" action="/edit/{{ id }}">
-        <input type="text" name="editbox" placeholder="Edit this todo...">
-        <input type="submit" name="edit" value="Edit todo">
-      </form>
-      <form method="post" action="/delete/{{ id }}">
-        <input type="submit" name="delete" value="Delete todo">
-      </form>
-    </li>
-      {{ /completed }}
-    {{ /todos }}
-  </ul>
+  <div class="completed-wrapper">
+    <h3>Completed todos</h3>
+    <ul>
+      {{ #todos }}
+      {{ #completed }}
+      <li class="completed">
+        <p>{{ title }}</p>
+      </li>
+        {{ /completed }}
+      {{ /todos }}
+    </ul>
 
-  <h3>Completed todos</h3>
-  <ul>
-    {{ #todos }}
-    {{ #completed }}
-    <li>
-      <p>{{ title }}</p>
-    </li>
-      {{ /completed }}
-    {{ /todos }}
-  </ul>
-
-  <form method="post" action="/deleteall">
-    <input type="submit" name="clear" value="Clear all completed todos">
-  </form>
+    <form method="post" action="/deleteall">
+      <input type="submit" name="clear" value="Clear all completed todos">
+    </form>
+  </div>
 
 </body>
 
